Pag de Ciencias Terminada

--- a/Formulario-Facultades/Ciencia.html
+++ b/Formulario-Facultades/Ciencia.html
@@ -45,8 +45,7 @@
                 
                 <h3 style="color:white;"><strong>Definicion de Ciencia</strong></h3>
                 <p style="color:white; font-size:15px;">
-                    Se denomina con el nombre de ingeniería a aquella disciplina que se ocupa del estudio y de la aplicación de los conocimientos que de este y de la experiencia resultan, para que a través de diseños, técnicas y problemas puedan ser resueltos los diferentes problemas que afectan a la humanidad.
-                    ingeniería ostenta, la principal función de un ingeniero será la de promover y desarrollar soluciones tecnológicas para aquellas necesidades sociales, industriales y económicas que vayan suscitándose en la vida.
+                    Es el conjunto de conocimientos sistemáticos sobre la naturaleza, los seres que la componen, los fenómenos que ocurren en ella y las leyes que rigen estos fenómenos. La ciencia es una facultad del hombre que le permite encontrar explicaciones a los fenómenos estudiados y respuestas a las interrogantes planteadas sobre acontecimientos determinados, mediante un conjunto de ideas que pueden ser provisionales, pues con la actividad de búsqueda continua y el esfuerzo de hombres y mujeres, estas explicaciones pueden variar y constituir un nuevo conocimiento.
                 </p>
               </div>
           </div>
@@ -57,24 +56,24 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="col-md-4">
-            <h2>Ingenieria Civil</h2>
-            <img src="img/civil.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-INGENIERIA-CIVIL.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+            <h2>Licenciatura En Matematicas</h2>
+            <img src="img/matematica.jpg" alt="" style="width:230px; height:180px;">
+            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-MATEMATICAS.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
           </div>
           <div class="col-md-4">
-            <h2>Ingenieria En Sistemas</h2>
-            <img src="img/sistemas.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-en-Sistemas.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+            <h2>Licenciatura En Fisica</h2>
+            <img src="img/fisico.jpg" alt="" style="width:230px; height:180px;">
+            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-FISICA-.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
           </div>
           <div class="col-md-4">
-            <h2>Ingenieria Electrica</h2>
-            <img src="img/electrica.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Electrica.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+            <h2>Licenciatura en Microbiologia</h2>
+            <img src="img/microbiologo.jpg" alt="" style="width:230px; height:180px;">
+            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-MICROBIOLOGIA.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
           </div>
           <div class="col-md-4">
-              <h2>Ingenieria Industrial</h2>
-              <img src="img/industrial.jpg" alt="" style="width:230px; height:180px;">
-              <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Ingenieria-Industrial.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+              <h2>Licenciatura En Biologia</h2>
+              <img src="img/biologo.jpg" alt="" style="width:230px; height:180px;">
+              <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-BIOLOGIA.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
             </div>
         </div>
 
