--- a/Formulario-Facultades/Ciencia-Espacial.html
+++ b/Formulario-Facultades/Ciencia-Espacial.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/logo.ico">
 
-    <title>Facultad de Ciencias UNAH</title>
+    <title>Facultad de Ciencias Espaciales UNAH</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
   <body style="font-family: 'K2D', sans-serif;">
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#" style = "font-size: 35px; font-weight: 600;">Facultad De Ciencias</a>
+      <a class="navbar-brand" href="#" style = "font-size: 35px; font-weight: 600;">Facultad De Ciencias Espaciales</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -40,12 +40,12 @@
           <div class="row">
               <h2 class="display-3" style="color:white;">Oferta Academica</h2>
               <div class ="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xm-12" style="width: 300px; height: 345px; background-color: rgba(0,36,132,0.7);">
-                <img class ="center" src="img/Ciencias-Formales-2.jpg" alt="" style="width:250px; height: 120px; margin-top: 10px; margin-left: auto;
+                <img class ="center" src="img/espaciales.jpg" alt="" style="width:250px; margin-top: 10px; margin-left: auto;
                     margin-right: auto; display: block;">
                 
-                <h3 style="color:white;"><strong>Definicion de Ciencia</strong></h3>
+                <h3 style="color:white;"><strong>Definicion de Ciencia Espacial</strong></h3>
                 <p style="color:white; font-size:15px;">
-                    Es el conjunto de conocimientos sistemáticos sobre la naturaleza, los seres que la componen, los fenómenos que ocurren en ella y las leyes que rigen estos fenómenos. La ciencia es una facultad del hombre que le permite encontrar explicaciones a los fenómenos estudiados y respuestas a las interrogantes planteadas sobre acontecimientos determinados, mediante un conjunto de ideas que pueden ser provisionales, pues con la actividad de búsqueda continua y el esfuerzo de hombres y mujeres, estas explicaciones pueden variar y constituir un nuevo conocimiento.
+                    as Ciencias Espaciales engloban diversas ramas del conocimiento, las Ciencias Espaciales son producto de la actividad humana que tiene por meta estudiar los objetos y fenómenos que ocurren un poco más allá de la atmósfera terrestre, así como sus propiedades, relaciones y leyes, es por eso que gran parte del conocimiento adquirido durante años ha servido al desarrollo de herramientas capaces de permitirle al hombre la comprensión y conquista del espacio exterior. 
                 </p>
               </div>
           </div>
@@ -56,24 +56,24 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="col-md-4">
-            <h2>Licenciatura En Matematicas</h2>
-            <img src="img/matematica.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-MATEMATICAS.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+            <h2>Licenciatura En Astronomia</h2>
+            <img src="img/astronomo.jpg" alt="" style="width:230px; height:180px;">
+            <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudio-de-Astronomia-y-Astrofisica.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
           </div>
           <div class="col-md-4">
-            <h2>Licenciatura En Fisica</h2>
-            <img src="img/fisico.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-FISICA-.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+            <h2>Licenciatura En Geografia</h2>
+            <img src="img/geografo.jpg" alt="" style="width:230px; height:180px;">
+            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIO-CIENCIA-Y-TECNOLOGIAS-DE-LA-INFORMACION-GEOGRAFICA.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
           </div>
           <div class="col-md-4">
-            <h2>Licenciatura en Microbiologia</h2>
-            <img src="img/microbiologo.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-MICROBIOLOGIA.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+            <h2>Licenciatura en Arqueoastronomia</h2>
+            <img src="img/carrera-cool.jpg" alt="" style="width:230px; height:180px;">
+            <p><a class="btn btn-secondary" href="pdf/Brochure_MARCAA.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
           </div>
           <div class="col-md-4">
-              <h2>Licenciatura En Biologia</h2>
-              <img src="img/biologo.jpg" alt="" style="width:230px; height:180px;">
-              <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-BIOLOGIA.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+              <h2>Licenciatura En Ciencias Aeronauticas</h2>
+              <img src="img/Pilots.jpg" alt="" style="width:230px; height:180px;">
+              <p><a class="btn btn-secondary" href="pdf/ciencias-aeronauticas.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
             </div>
         </div>
 
