--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-complements.css">
     <link rel="stylesheet" href="css/estilos.css">
     
     <style>
@@ -27,54 +28,60 @@
 </head>
 <body>
     <div class="container-fluid">
-        <br>
-        <header>
-            <nav class = "navbar navbar-default navbar-fixed-top">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-1">
-                            <span class="sr-only">Menu</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a href="#" class="navbar-brand">DIIP-UNAH</a>
+        <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-light bg-light">
+            <a class="navbar-brand" href="#">DIIP-UNAH</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-1" aria-controls="navbar-1" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          
+            <div class="collapse navbar-collapse" id="navbar-1">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Pagina Principal <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Primer Ingreso</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Sistema de Pregrado
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Centros de Estudio
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="#">Something else here</a>
                     </div>
-
-                    <div class="collapse navbar-collapse" id="navbar-1">
-                        <ul class="nav navbar-nav">
-                            <li class="active"><a href="#">Pagina Principal</a></li>
-                            <li><a href="https://www.youtube.com/watch?v=95kisnKdJwo">Primer Ingreso</a></li>
-                            <li><a href="#">Pagina Principal</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
-                                    Sistema Pregrado <span class="caret"></span>    
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Item #1</a></li>
-                                    <li><a href="#">Item #2</a></li>
-                                    <li><a href="#">Item #3</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Item #5</a></li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    Centros de Estudio <span class="caret"></span>    
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Item #1</a></li>
-                                    <li><a href="#">Item #2</a></li>
-                                    <li><a href="#">Item #3</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Item #5</a></li>
-                                </ul>
-                            </li>
-                        </ul>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Facultades
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="#">Action</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="#">Something else here</a>
                     </div>
-                </div>
-            </nav>
-        </header>
+                  </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
+        </nav>
     </div>
 
     <div class="contenido">
