--- a/Formulario-Facultades/Facult-page.html
+++ b/Formulario-Facultades/Facult-page.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Facultades UNAH</title>
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/bootstrap.min">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="icon"  href="img/logo.ico" />
 
 </head>
@@ -19,7 +19,7 @@
     </header>
     <div class="container portafolio">
         <div class = "row">
-            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
+            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6  col-sm-12 portafolio-img">
                 <img src="img/ciencias.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Ciencias</h2>
@@ -30,7 +30,7 @@
                     <a href="Ciencia.html" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
-            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
+            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-sm-12 portafolio-img">
                 <img src="img/ciencias_espaciales.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Ciencias Espaciales</h2>
@@ -41,7 +41,7 @@
                     <a href="Ciencia-Espacial.html" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
-            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
+            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6  col-sm-12 portafolio-img">
                 <img src="img/ciencias_sociales.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Ciencias Sociales</h2>
@@ -52,7 +52,7 @@
                     <a href="Ciencia-Social.html" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
-            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
+            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-sm-12 portafolio-img">
                 <img src="img/economicas.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Economia</h2>
@@ -63,7 +63,7 @@
                     <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
-            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
+            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-sm-12 portafolio-img">
                 <img src="img/Facultad_de_Ciencias_Medican_UNAH.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Ciencias Medicas</h2>
@@ -74,7 +74,7 @@
                     <a href="Ciencias-Medica.html" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
-            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
+            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-sm-12 portafolio-img">
                 <img src="img/humanidades.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Humanidades</h2>
@@ -85,7 +85,7 @@
                     <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
-            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
+            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-sm-12 portafolio-img">
                 <img src="img/ingenieria.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Ingenieria</h2>
@@ -96,7 +96,7 @@
                     <a href="Ingenieria.html" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
-            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
+            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-sm-12 portafolio-img">
                 <img src="img/juridicas.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Ciencias Juridicas</h2>
@@ -107,7 +107,7 @@
                     <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
-            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 portafolio-img">
+            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-sm-12 portafolio-img">
                 <img src="img/odontologia.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto">
                     <h2>Facultad de Odontologia</h2>
@@ -119,7 +119,7 @@
                     <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
-            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-xm-12 ">
+            <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-sm-12 ">
                 <img src="img/quimicas.png" alt="" class = "portafolio-img">
                 <section class = "portafolio-texto" >
                     <h2>Facultad de Quimica Y Farmancia</h2>
