Footer pag principal

--- a/Pag-Principal/Index.html
+++ b/Pag-Principal/Index.html
@@ -131,7 +131,105 @@
         </a>
     </div>
     
-    
+    <!-- Footer -->
+    <footer class="page-footer font-small unique-color-dark">
+        <div style="background-color: #6351ce;">
+            <div class="container">
+                <div class="row py-4 d-flex align-items-center">
+                    <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+                        <h6 class="mb-0">Universidad Nacional Autónoma de Honduras</h6>
+                    </div>
+                    <div class="col-md-6 col-lg-7 text-center text-md-right">
+                        <!-- Facebook -->
+                        <a class="fb-ic" href="#!">
+                            <i class="fa fa-facebook white-text mr-4"> </i>
+                        </a>
+                        <!-- Twitter -->
+                        <a class="tw-ic" href="#!">
+                            <i class="fa fa-twitter white-text mr-4"> </i>
+                        </a>
+                        <!-- Google +-->
+                        <a class="gplus-ic" href="#!">
+                            <i class="fa fa-google-plus white-text mr-4"> </i>
+                        </a>
+                        <!--Linkedin -->
+                        <a class="li-ic" href="#!">
+                            <i class="fa fa-linkedin white-text mr-4"> </i>
+                        </a>
+                        <!--Instagram-->
+                        <a class="ins-ic" href="#!">
+                            <i class="fa fa-instagram white-text"> </i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container text-center text-md-left mt-5">
+            <div class="row mt-3">
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                    <h6 class="text-uppercase font-weight-bold">DIPP-UNAH</h6>
+                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    </p>
+                </div>
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">          
+                    <h6 class="text-uppercase font-weight-bold">Información</h6>
+                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <a href="#!">Comunicados</a>
+                    </p>
+                    <p>
+                        <a href="#!">Calendario Academico</a>
+                    </p>
+                    <p>
+                        <a href="#!">Mapa del Campus</a>
+                    </p>
+                    <p>
+                        <a href="#!">Oferta Académica</a>
+                    </p>
+                </div>
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h6 class="text-uppercase font-weight-bold">Contactanos</h6>
+                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <a href="#!">Mision</a>
+                    </p>
+                    <p>
+                        <a href="#!">Vision</a>
+                    </p>
+                    <p>
+                        <a href="#!">Preguntas Frecuentes</a>
+                    </p>
+                    <p>
+                        <a href="#!">Comunidad</a>
+                    </p>
+                </div>
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <h6 class="text-uppercase font-weight-bold">Contact</h6>
+                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <i class="fa fa-home mr-3"></i>Bulevar Suyapa, Tegucigalpa, M.D.C, Honduras, Centroamérica
+                    </p>
+                    <p>
+                        <i class="fa fa-envelope mr-3"></i>info@unah.edu.hn
+                    </p>
+                    <p>
+                        <i class="fa fa-phone mr-3"></i>2216-6100
+                    </p>
+                    <p>
+                        <i class="fa fa-phone mr-3"></i>2216-7000
+                    </p>
+                    <p>
+                        <i class="fa fa-phone mr-3"></i>2216-7000
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright text-center py-3">© 2018 Copyright:
+          <a href="#"> UnstoppableDevelopment.com</a>
+        </div>
+    </footer>
   
     <!--Arvhicos JavaScript-->
     <script src="js/jquery-latest.js"></script>
