Actualizacion pag principal

--- a/Pag-Principal/Index.html
+++ b/Pag-Principal/Index.html
@@ -40,28 +40,48 @@
                   <a class="nav-link" href="#">Pagina Principal <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Primer Ingreso</a>
+                  <a class="nav-link" href="../Formularios-Sign-in-Alumnos/Sign-in.html">Primer Ingreso</a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Sistema de Pregrado
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Sistema de Pregrado
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Sistema de Pregrado</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="../Formularios-Sign-in-Alumnos/Sign-in.html">
+                            Alumnos</a>
+                        <a class="dropdown-item" href="../Formularios-Sign-in-catedraticos/Sign-in.html">
+                            Catedráticos</a>
+                        <a class="dropdown-item" href="../Formularios-Sign-in-Coordinadores/Sign-in.html">
+                            Coordinadores</a>
+                        <a class="dropdown-item" href="../Formularios-Sign-in-Jefes-Departamento/Sign-in.html">
+                            Jefes de Departamento</a>
+                    </div>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Centros de Estudio
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#">Centros de Estudio</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="../">
+                            UNAH-TEC Danli</a>
+                        <a class="dropdown-item" href="../">
+                            UNAH-VS</a>
+                        <a class="dropdown-item" href="../">
+                            UNAH-TEC AGUÁN</a>
+                        <a class="dropdown-item" href="../">
+                            UNAH-CURC</a>
+                        <a class="dropdown-item" href="../">
+                            UNAH-CURLA</a>
+                        <a class="dropdown-item" href="../">
+                            UNAH-CURLP</a>
+                        <a class="dropdown-item" href="../">
+                            UNAH-CUROC</a>
+                        <a class="dropdown-item" href="../">
+                            UNAH-CURNO</a>
                     </div>
                   </li>
                   <li class="nav-item dropdown">
@@ -69,10 +89,28 @@
                       Facultades
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">Action</a>
-                      <a class="dropdown-item" href="#">Another action</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#">Facultades</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="../Formulario-Facultades/Ciencia-Social.html">
+                            Ciencias Sociales</a>
+                        <a class="dropdown-item" href="../Formulario-Facultades/.html">
+                            Química y Farmacia</a>
+                        <a class="dropdown-item" href="../Formulario-Facultades/.html">
+                            Odontología</a>
+                        <a class="dropdown-item" href="../Formulario-Facultades/.html">
+                            Ciencias Jurídicas</a>
+                        <a class="dropdown-item" href="../Formulario-Facultades/Ingenieria.html">
+                            Ingeniería</a>
+                        <a class="dropdown-item" href="../Formulario-Facultades/.html">
+                            Humanidades y Artes</a>
+                        <a class="dropdown-item" href="../Formulario-Facultades/Ciencia-Espacial.html">
+                            Ciencias Espaciales</a>
+                        <a class="dropdown-item" href="../Formulario-Facultades/.html">
+                            Ciencias Económicas, Administrativas y Contables</a>
+                        <a class="dropdown-item" href="../Formulario-Facultades/Ciencia.html">
+                            Ciencias</a>
+                        <a class="dropdown-item" href="../Formulario-Facultades/Ciencias-Medica.html">
+                            Ciencias Médicas</a>
                     </div>
                   </li>
               </ul>
@@ -139,26 +177,26 @@
                     <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
                         <h6 class="mb-0">Universidad Nacional Autónoma de Honduras</h6>
                     </div>
-                    <div class="col-md-6 col-lg-7 text-center text-md-right">
+                    <div class="col-md-6 col-lg-7 text-center text-md-right social-icon">
                         <!-- Facebook -->
-                        <a class="fb-ic" href="#!">
-                            <i class="fa fa-facebook white-text mr-4"> </i>
+                        <a rel="nofollow" target="_blank" id="" href="https://www.facebook.com/unahoficial">
+                            <i class="fa fa-facebook white-text mr-4 mr-4"> </i>
                         </a>
                         <!-- Twitter -->
-                        <a class="tw-ic" href="#!">
+                        <a rel="nofollow" target="_blank" id="" href="https://twitter.com/unahoficial">
                             <i class="fa fa-twitter white-text mr-4"> </i>
                         </a>
                         <!-- Google +-->
-                        <a class="gplus-ic" href="#!">
-                            <i class="fa fa-google-plus white-text mr-4"> </i>
-                        </a>
-                        <!--Linkedin -->
-                        <a class="li-ic" href="#!">
-                            <i class="fa fa-linkedin white-text mr-4"> </i>
+                        <a rel="nofollow" target="_blank" id="" href="https://youtube.com/unahoficial">
+                            <i class="fa fa-youtube white-text mr-4"> </i>
                         </a>
                         <!--Instagram-->
-                        <a class="ins-ic" href="#!">
-                            <i class="fa fa-instagram white-text"> </i>
+                        <a rel="nofollow" target="_blank" id="" href="https://instagram.com/unahoficial">
+                            <i class="fa fa-instagram white-text mr-4"> </i>
+                        </a>
+                        <!--Linkedin -->
+                        <a rel="nofollow" target="_blank" id="" href="https://www.linkedin.com/school/unahoficial">
+                            <i class="fa fa-linkedin white-text mr-4"> </i>
                         </a>
                     </div>
                 </div>
@@ -227,7 +265,11 @@
             </div>
         </div>
         <div class="footer-copyright text-center py-3">© 2018 Copyright:
-          <a href="#"> UnstoppableDevelopment.com</a>
+            <span>Programación Orientada a Objetos</span>
+            <br>
+            <span>Bryan Ariel Anariba</span>
+            <span>&</span>
+            <span>Luis Fernando Solano</span>
         </div>
     </footer>
   
