Pag UNAH-TEC_Danli

--- a/Formulario-Centros-Re/Centros-Regionales.html
+++ b/Formulario-Centros-Re/Centros-Regionales.html
@@ -5,9 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Inicio-Universidad Nacional Autonoma De Honduras</title>
-        <link rel="icon" href="img/logo.ico">
-    
+        <link rel="icon" href="../Pag-Principal/img/logo.ico">
+
+        <link href="https://fonts.googleapis.com/css?family=K2D:200,400,700" rel="stylesheet" >
+
         <!--Arvhicos CSS-->
+        <link rel="stylesheet" href="../Pag-Principal/css/fontello.css">
+        <link rel="stylesheet" href="../Pag-Principal/css/font-awesome.css">
         <link rel="stylesheet" href="../Pag-Principal/css/bootstrap.min.css">
         <link rel="stylesheet" href="../Pag-Principal/css/bootstrap-complements.css">
         <link rel="stylesheet" href="../Pag-Principal/css/estilos.css">
@@ -15,6 +19,10 @@
         <style>
             body{
                 padding-top: 56px;
+            }
+            .social-icon a{
+                color: #fff;
+                text-decoration: none;
             }
             h5, small{
                 text-align: center;
@@ -45,7 +53,7 @@
             <div class="collapse navbar-collapse" id="navbar-1">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pagina Principal <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="../Pag-Principal/Index.html">Pagina Principal <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../Formularios-Sign-in-Alumnos/Sign-in.html">Primer Ingreso</a>
@@ -68,27 +76,27 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown active">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="../Formulario-Centros-Re/Centros-Regionales.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Centros de Estudio
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#">Centros de Estudio</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="../">
+                            <a class="dropdown-item" href="../Formulario-Centros-Re/UNAH-TEC_Danli.html">
                                 UNAH-TEC Danli</a>
-                            <a class="dropdown-item" href="../">
+                            <a class="dropdown-item" href="../Formulario-Centros-Re/UNAH-VS.html">
                                 UNAH-VS</a>
-                            <a class="dropdown-item" href="../">
+                            <a class="dropdown-item" href="../Formulario-Centros-Re/UNAH-AGUAN.html">
                                 UNAH-TEC AGUÁN</a>
-                            <a class="dropdown-item" href="../">
+                            <a class="dropdown-item" href="../Formulario-Centros-Re/UNAH-CURC.html">
                                 UNAH-CURC</a>
-                            <a class="dropdown-item" href="../">
+                            <a class="dropdown-item" href="../Formulario-Centros-Re/UNAH-CULA.html">
                                 UNAH-CURLA</a>
-                            <a class="dropdown-item" href="../">
+                            <a class="dropdown-item" href="../Formulario-Centros-Re/UNAH-CURLP.html">
                                 UNAH-CURLP</a>
-                            <a class="dropdown-item" href="../">
+                            <a class="dropdown-item" href="../Formulario-Centros-Re/UNAH-CUROC.html">
                                 UNAH-CUROC</a>
-                            <a class="dropdown-item" href="../">
+                            <a class="dropdown-item" href="../Formulario-Centros-Re/UNAH-CURNO.html">
                                 UNAH-CURNO</a>
                         </div>
                     </li>
@@ -256,7 +264,9 @@
             </div>
         </div>
     </div>
-
+    <br>
+    
+    <br>
     <!-- Footer -->
     <footer class="page-footer font-small unique-color-dark">
         <div style="background-color: #6351ce;">
