actualizacion paginas de humanidades artes economia juridica

--- a/Formulario-Facultades/Facult-page.html
+++ b/Formulario-Facultades/Facult-page.html
@@ -60,7 +60,7 @@
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
                     </p>
-                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
+                    <a href="Economica.html" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-sm-12 portafolio-img">
@@ -82,7 +82,7 @@
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
                     </p>
-                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
+                    <a href="Humanidades-y-Artes.html" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-sm-12 portafolio-img">
@@ -104,7 +104,7 @@
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
                     </p>
-                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
+                    <a href="Ciencias-Juridicas.html" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-sm-12 portafolio-img">
@@ -137,7 +137,9 @@
 
     <footer class = "container-fluid" style="background:#003399;">
         <div class = "row">
-                <h2>Visitanos</h2>
+            <div style="text-align:center;" class = "col-md-12 col-sm-12 col-12">
+                <h2 style="font-size:40px;">Visitanos</h2>
+            </div>   
         </div>  
     </footer>
 </body>
