--- a/Formulario-Facultades/Humanidades-y-Artes.html
+++ b/Formulario-Facultades/Humanidades-y-Artes.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/logo.ico">
 
-    <title>Facultad de Ciencias Espaciales UNAH</title>
+    <title>Facultad de Humanidades y Artes UNAH</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,18 +19,22 @@
   <body style="font-family: 'K2D', sans-serif;">
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#" style = "font-size: 35px; font-weight: 600;">Facultad De Ciencias Espaciales</a>
+      <a class="navbar-brand" href="#" style = "font-size: 35px; font-weight: 600;">Humanidades y Artes</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault" style="margin-left:20px;">
+        
+
         <ul class="navbar-nav mr-auto">
             <form class="form-inline my-2 my-lg-0">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="button" onclick="location.href='Facult-page.html'">Pag Principal</button>
             </form>
+        </ul>
       </div>
     </nav>
+
 
     <main role="main">
 
@@ -40,12 +44,12 @@
           <div class="row">
               <h2 class="display-3" style="color:white;">Oferta Academica</h2>
               <div class ="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xm-12" style="width: 300px; height: 345px; background-color: rgba(0,36,132,0.7);">
-                <img class ="center" src="img/espaciales.jpg" alt="" style="width:250px; margin-top: 10px; margin-left: auto;
+                <img class ="center" src="img/artes.jpg" alt="" style="width:250px; height: 150px; margin-top: 10px; margin-left: auto;
                     margin-right: auto; display: block;">
                 
-                <h3 style="color:white;"><strong>Definicion de Ciencia Espacial</strong></h3>
+                <h3 style="color:white;"><strong>Definicion de Humanidades y Artes</strong></h3>
                 <p style="color:white; font-size:15px;">
-                    as Ciencias Espaciales engloban diversas ramas del conocimiento, las Ciencias Espaciales son producto de la actividad humana que tiene por meta estudiar los objetos y fenómenos que ocurren un poco más allá de la atmósfera terrestre, así como sus propiedades, relaciones y leyes, es por eso que gran parte del conocimiento adquirido durante años ha servido al desarrollo de herramientas capaces de permitirle al hombre la comprensión y conquista del espacio exterior. 
+                    El Área de Artes y Humanidades es una de las más antiguas en los sistemas educativos universitarios de todo el mundo, pues contiene una gran variedad de estudios que podrían clasificarse de manera genérica como manifestaciones artísticas o culturales de todo tipo. 
                 </p>
               </div>
           </div>
@@ -56,24 +60,34 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="col-md-4">
-            <h2>Licenciatura En Astronomia</h2>
-            <img src="img/astronomo.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudio-de-Astronomia-y-Astrofisica.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+            <h2>Licenciatura En Arquitectura</h2>
+            <img src="img/arquitectos.jpg" alt="" style="width:230px; height:180px;">
+            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUIDOS-ARQUITECTURA-.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
           </div>
           <div class="col-md-4">
-            <h2>Licenciatura En Geografia</h2>
-            <img src="img/geografo.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIO-CIENCIA-Y-TECNOLOGIAS-DE-LA-INFORMACION-GEOGRAFICA.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+            <h2>Licenciatura En Pedagogia</h2>
+            <img src="img/cuanto-cobra-un-pedagogo2-600x393.jpg" alt="" style="width:230px; height:180px;">
+            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-PEDAGOGIA.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
           </div>
           <div class="col-md-4">
-            <h2>Licenciatura en Arqueoastronomia</h2>
-            <img src="img/carrera-cool.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/Brochure_MARCAA.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+            <h2>Licenciatura En Letras</h2>
+            <img src="img/letras.jpg" alt="" style="width:230px; height:180px;">
+            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-LETRAS.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
           </div>
           <div class="col-md-4">
-              <h2>Licenciatura En Ciencias Aeronauticas</h2>
-              <img src="img/Pilots.jpg" alt="" style="width:230px; height:180px;">
-              <p><a class="btn btn-secondary" href="pdf/ciencias-aeronauticas.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+              <h2>Licenciatura En Filosofia</h2>
+              <img src="img/portal-ucc-filosofia_Fotor.jpg" alt="" style="width:230px; height:180px;">
+              <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-FILOSOFIA.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+            </div>
+            <div class="col-md-4">
+              <h2>Licenciatura En Lenguas Extrangeras</h2>
+              <img src="img/Idiomas-y-Lenguas-Extranjeras.jpg" alt="" style="width:230px; height:180px;">
+              <p><a class="btn btn-secondary" href="pdf/Plan-de-Lenguas-Extranjeras-en-la-Ensenanza-del-Ingles-y-Frances.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+            </div>
+            <div class="col-md-4">
+              <h2>Licenciatura En Musica</h2>
+              <img src="img/musico.jpg" alt="" style="width:230px; height:180px;">
+              <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Musica.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
             </div>
         </div>
 
