--- a/Formulario-Facultades/Ciencia.html
+++ b/Formulario-Facultades/Ciencia.html
@@ -77,7 +77,7 @@
             </div>
         </div>
 
-        <hr>
+        <hr style="border:3px solid rgb(0,36,132);">
 
       </div> <!-- /container -->
 
