--- a/Formulario-Facultades/Ciencias-Juridicas.html
+++ b/Formulario-Facultades/Ciencias-Juridicas.html
@@ -19,7 +19,7 @@
   <body style="font-family: 'K2D', sans-serif;">
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#" style = "font-size: 35px; font-weight: 600;">Facultad De Ciencias Medicas</a>
+      <a class="navbar-brand" href="#" style = "font-size: 35px; font-weight: 600;">Facultad De Ciencias Juridicas</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,6 +31,7 @@
         </form>
       </div>
     </nav>
+    
 
     <main role="main">
 
@@ -40,12 +41,12 @@
           <div class="row">
               <h2 class="display-3" style="color:white;">Oferta Academica</h2>
               <div class ="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xm-12" style="width: 300px; height: 345px; background-color: rgba(0,36,132,0.7);">
-                <img class ="center" src="img/medicina.jpg" alt="" style="width:250px; margin-top: 10px; margin-left: auto;
+                <img class ="center" src="img/hqdefault.jpg" alt="" style="width:230px; height: 120px; margin-top: 10px; margin-left: auto;
                     margin-right: auto; display: block;">
                 
-                <h3 style="color:white;"><strong>Definicion de Ciencias Medicas</strong></h3>
+                <h3 style="color:white;"><strong>Definicion de Ciencia Juridica</strong></h3>
                 <p style="color:white; font-size:15px;">
-                    El término medicina proviene del latín medicīna y hace referencia a la ciencia que permite prevenir y curar las enfermedades del cuerpo humano. Medicina también se utiliza como sinónimo de medicamento (del latín medicamentum), que es la sustancia que permite prevenir, aliviar o curar las enfermedades o sus secuelas, La medicina, junto a la farmacia, la enfermería y otras disciplinas, forman el grupo de las ciencias de la salud.
+                    Las Ciencias Jurídicas, también denominadas ciencias del derecho, son aquellas que realizan el complejo y constante estudio del ordenamiento jurídico y su aplicación en la sociedad. Las Ciencias Jurídicas realizan interpretaciones de la norma y a través de los fenómenos sociales es que se determina si estas funcionan adecuadamente o necesitan ser reformadas. El fundamento de estas ciencias es básicamente el problema entre los humanos.
                 </p>
               </div>
           </div>
@@ -56,19 +57,9 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="col-md-4">
-            <h2>Lic en Enfermería</h2>
-            <img src="img/enfermera.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-ENFERMERIA.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
-          </div>
-          <div class="col-md-4">
-            <h2>Lic En Medicina General</h2>
-            <img src="img/doctor.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-MEDICINA-Y-CIRUGIA.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
-          </div>
-          <div class="col-md-4">
-            <h2>Lic En Nutricion</h2>
-            <img src="img/nutricion.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/Plan-de-Estudios-Nutricion.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+            <h2>Licenciatura En Derecho</h2>
+            <img src="img/abogado.jpg" alt="" style="width:230px; height:180px;">
+            <p><a class="btn btn-secondary" href="pdf/PLAN-De-Estudios.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
           </div>
         </div>
         <hr style="border:3px solid rgb(0,36,132);">
@@ -76,8 +67,12 @@
 
     </main>
 
-    <footer class="container-fluid" style="height:100px; background-color:rgb(0,36,132); color:white;">
-      <p style="font-size:28px; text-align: center;">Ingenieria en Sistemas, Clase Programacion Orientada A Objetos III-2018</p>
+    <footer class="container-fluid" style="height:125px; background-color:rgb(0,36,132); color:white;">
+        <div class = "row">
+            <div class = "col-sm-12 col-12">
+                <p style="font-size:28px; text-align: center;">Ingenieria en Sistemas, Clase Programacion Orientada A Objetos III-2018</p>
+            </div>
+        </div>
     </footer>
 
     <!-- Bootstrap core JavaScript
