Paginas de facultades completas

--- a/Formulario-Facultades/Odontologia.html
+++ b/Formulario-Facultades/Odontologia.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/logo.ico">
 
-    <title>Facultad de Ciencias Juridicas UNAH</title>
+    <title>Facultad de Odontologia UNAH</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
   <body style="font-family: 'K2D', sans-serif;">
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#" style = "font-size: 35px; font-weight: 600;">Facultad De Ciencias Juridicas</a>
+      <a class="navbar-brand" href="#" style = "font-size: 35px; font-weight: 600;">Facultad De Odontologia</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,12 +41,12 @@
           <div class="row">
               <h2 class="display-3" style="color:white;">Oferta Academica</h2>
               <div class ="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xm-12" style="width: 300px; height: 345px; background-color: rgba(0,36,132,0.7);">
-                <img class ="center" src="img/hqdefault.jpg" alt="" style="width:230px; height: 120px; margin-top: 10px; margin-left: auto;
+                <img class ="center" src="img/consejos-BLANCO1.jpg" alt="" style="width:230px; height: 120px; margin-top: 10px; margin-left: auto;
                     margin-right: auto; display: block;">
                 
-                <h3 style="color:white;"><strong>Definicion de Ciencia Juridica</strong></h3>
+                <h3 style="color:white;"><strong>Definicion de Odontologia</strong></h3>
                 <p style="color:white; font-size:15px;">
-                    Las Ciencias Jurídicas, también denominadas ciencias del derecho, son aquellas que realizan el complejo y constante estudio del ordenamiento jurídico y su aplicación en la sociedad. Las Ciencias Jurídicas realizan interpretaciones de la norma y a través de los fenómenos sociales es que se determina si estas funcionan adecuadamente o necesitan ser reformadas. El fundamento de estas ciencias es básicamente el problema entre los humanos.
+                    La odontología es la especialidad médica que se dedica al estudio de los dientes y las encías y al tratamiento de sus dolencias. Esta disciplina se encarga de todo lo referente al aparato estomatognático, formado por el conjunto de órganos y tejidos que se encuentran en la cavidad oral y en parte del cráneo, la cara y el cuello.
                 </p>
               </div>
           </div>
@@ -57,9 +57,9 @@
         <!-- Example row of columns -->
         <div class="row">
           <div class="col-md-4">
-            <h2>Licenciatura En Derecho</h2>
-            <img src="img/abogado.jpg" alt="" style="width:230px; height:180px;">
-            <p><a class="btn btn-secondary" href="pdf/PLAN-De-Estudios.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
+            <h2>Licenciatura En Odontologia</h2>
+            <img src="img/odontoprev_banner_odontologos.jpg" alt="" style="width:230px; height:180px;">
+            <p><a class="btn btn-secondary" href="pdf/PLAN-DE-ESTUDIOS-ODONTOLOGIA.pdf" target="_blank" role="button">Ver Plan de Estudios</a></p>
           </div>
         </div>
         <hr style="border:3px solid rgb(0,36,132);">
