--- a/Formulario-Facultades/Facult-page.html
+++ b/Formulario-Facultades/Facult-page.html
@@ -116,7 +116,7 @@
                         a dicha facultad, asi como los planes de estudio.
                         
                     </p>
-                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
+                    <a href="Odontologia.html" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
             <section class = "portafolio-item col-xl-3 col-lg-3 col-md-6 col-sm-12 ">
@@ -127,7 +127,7 @@
                         Da clic para acceder a toda la informacion de las carreras pertenecientes
                         a dicha facultad, asi como los planes de estudio.
                     </p>
-                    <a href="#" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
+                    <a href="Quimica.html" class= "decoracion" style="text-decoration: none;">Acceder Aqui</a>
                 </section>
             </section>
         </div>
